Slowly getting the toggles working correctly. Next is to populate the lists and hide/show instead of add/remove so games in a list can be added while a list is collapsed.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -381,7 +381,7 @@ input:checked + .slider:before {
 
 #selectLists {
   overflow-y: scroll;
-  grid-area: 7/2/16/10;
+  grid-area: 7/2/15/10;
   height: 100%;
 }
 
